week2/day2/examples/pod-with-private-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-image-pod
  labels:
    app: private-registry-demo
spec:
  containers:
  - name: private-app
    # Private registry의 이미지 사용
    image: my-registry.com/private/webapp:v1.0
    ports:
    - containerPort: 8080
    
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: "500m"
  
  # Private 이미지 Pull을 위한 Secret
  imagePullSecrets:
  - name: docker-registry-secret
  
  restartPolicy: Always

---
# Docker Registry Secret을 사용하는 Deployment 예시
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: private-app
  template:
    metadata:
      labels:
        app: private-app
    spec:
      containers:
      - name: private-app
        image: my-registry.com/private/webapp:v1.0
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: docker-registry-secret
